--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -37,8 +37,8 @@
             </div>
 
             <div class="navbar-nav ms-auto">
-              <form class="d-flex" role="search">
-                <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" >
+              <form class="d-flex" role="search" action="/listings" method="post">
+                <input class="form-control me-2 search-inp" name="g" type="search" placeholder="Search destinations" >
                 <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
               </form>
             </div>
